--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "body-parser": "^1.12.2",
-    "request": "^2.54.0",
-    "querystring": "^0.2.0"
+    "request": "^2.54.0"
   },
   "scripts": {
     "start": "node app.js"
